--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,12 +1,32 @@
 <div class="row">
 	<div class="span6 offset3">
+			<h1>
+				Pin <%= @pin.id %>
+			</h1>
+			<br />
 		<div class="well">
 			<p>
-  				<%= @pin.description %>
+  			<%= @pin.description %>
+  			<br />
 			</p>
-			<%= link_to 'Edit', edit_pin_path(@pin) %>
-			<%= link_to 'Back', pins_path %>
 		</div>
+			<p>
+  			<%= @pin.user.email %>
+  			<br />
+  			<%= @pin.created_at %>
+			</p>
+			<% if current_user == @pin.user %>
+				<table>
+				<tr>
+				<td>
+				<%= link_to 'Edit', edit_pin_path(@pin), class: "btn btn-primary" %>
+				</td>
+				<td>
+				<%= link_to 'Back', pins_path, class: "btn btn-primary" %>
+				</td>
+				</tr>
+				</table>
+				<% end %>
 	</div>
 </div>
 
